add changes to files

--- a/insure-landing-page-desktop/index.html
+++ b/insure-landing-page-desktop/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="stylesheet.css">
   <title>Frontend Mentor | Insure landing page</title>
 </head>
@@ -14,10 +16,11 @@
       <li>How we work</li>
       <li>Blog</li>
       <li>Account</li>
-      <li>View plans</li>
+      <li><a href="">View plans</a></li>
     </ul>
   </nav>
-  <section>
+  <section class="human">
+    <img src="./images/bg-pattern-intro-right-desktop.svg">
     <img src="./images/image-intro-desktop.jpg">
     <h1>Humanizing your insurance.</h1>
     <p>Get your life insurance coverage easier and faster. We blend our expertise 
