--- a/insure-landing-page-desktop/index.html
+++ b/insure-landing-page-desktop/index.html
@@ -20,13 +20,19 @@
     </ul>
   </nav>
   <section class="human">
-    <img src="./images/bg-pattern-intro-right-desktop.svg">
-    <img src="./images/image-intro-desktop.jpg">
-    <h1>Humanizing your insurance.</h1>
-    <p>Get your life insurance coverage easier and faster. We blend our expertise 
+    <div class="text1">
+      <h1>Humanizing your insurance.</h1>
+      <p>Get your life insurance coverage easier and faster. We blend our expertise 
       and technology to help you find the plan that’s right for you. Ensure you 
       and your loved ones are protected.</p>
-    <span>View plans</span>
+      <span>View plans</span>
+    </div>
+    <div class="peopleContainer">
+      <img class='people' src="./images/image-intro-desktop.jpg">
+    </div>
+    <div class="introContainer">
+      <img class='intro' src="./images/bg-pattern-intro-right-desktop.svg">
+    </div>
   </section>
   <section>
     <h2>We’re different</h2>
