add changes to css

--- a/insure-landing-page-desktop/index.html
+++ b/insure-landing-page-desktop/index.html
@@ -34,7 +34,7 @@
       <img class='intro' src="./images/bg-pattern-intro-right-desktop.svg">
     </div>
   </section>
-  <section>
+  <section class="different">
     <h2>We’re different</h2>
     <div>
       <img src="./images/icon-snappy-process.svg">
