--- a/insure-landing-page-desktop/index.html
+++ b/insure-landing-page-desktop/index.html
@@ -39,23 +39,24 @@
     <div class="bullets">
       <div>
         <img src="./images/icon-snappy-process.svg">
-        <h3>Snappy Process</h3>
-        <p>Our application process can be completed in minutes, not hours. Don’t get 
+        <h3 class="headings">Snappy Process</h3>
+        <p class ="words">Our application process can be completed in minutes, not hours. Don’t get 
           stuck filling in tedious forms.</p>
       </div>
       <div>
         <img src="./images/icon-affordable-prices.svg">
-        <h3>Affordable Prices</h3>
-        <p>We don’t want you worrying about high monthly costs. Our prices may be low, 
+        <h3 class="headings">Affordable Prices</h3>
+        <p class ="words">We don’t want you worrying about high monthly costs. Our prices may be low, 
           but we still offer the best coverage possible.</p>
       </div>
       <div>
         <img src="./images/icon-people-first.svg">
-        <h3>People First</h3>
-        <p> Our plans aren’t full of conditions and clauses to prevent payouts. We make sure you’re covered when you need it.</p>
+        <h3 class="headings">People First</h3>
+        <p class ="words"> Our plans aren’t full of conditions and clauses to prevent payouts. We make sure you’re covered when you need it.</p>
       </div>
     </div>
-    <section>
+    <section class="howwe">
+      <img src="./images/bg-pattern-how-we-work-desktop.svg">
       <h2>Find out more about how we work</h2>
       <span>How we work</span>
     </section>
