add changes to html and css

--- a/insure-landing-page-desktop/index.html
+++ b/insure-landing-page-desktop/index.html
@@ -56,23 +56,29 @@
       </div>
     </div>
     <section class="howwe">
-      <img src="./images/bg-pattern-how-we-work-desktop.svg">
-      <h2>Find out more about how we work</h2>
-      <span>How we work</span>
+      <div class="swirl">
+        <img class="swirls" src="./images/bg-pattern-how-we-work-desktop.svg">
+      </div>
+      <div class="work">
+        <h2>Find out more about how we work</h2>
+        <span>How we work</span>
+      </div>
     </section>
     <div class="bgContainer">
       <img class="bg" src="./images/bg-pattern-intro-left-desktop.svg">
     </div>
   </section>
-  <footer>
-    <div>
+  <footer class="foot">
+    <div class="flexfoot1">
       <img src="./images/logo.svg">
-      <img src="./images/icon-facebook.svg">
-      <img src="./images/icon-twitter.svg">
-      <img src="./images/icon-pinterest.svg">
-      <img src="./images/icon-instagram.svg">
+      <div>
+        <img src="./images/icon-facebook.svg">
+        <img src="./images/icon-twitter.svg">
+        <img src="./images/icon-pinterest.svg">
+        <img src="./images/icon-instagram.svg">
+      </div>
     </div>
-    <div>
+    <div class="flexfoot2">
       <div>
         <h5>Our company</h5>
         <p>How we work</p>
