add changes to html and css

--- a/insure-landing-page-desktop/index.html
+++ b/insure-landing-page-desktop/index.html
@@ -80,34 +80,33 @@
     </div>
     <div class="flexfoot2">
       <div>
-        <h5>Our company</h5>
-        <p>How we work</p>
-        <p>Why Insure?</p>
-        <p>View plans</p>
-        <p>Reviews</p>
+        <h5 class="flexh">Our company</h5>
+        <p class="flexp">How we work</p>
+        <p class="flexp">Why Insure?</p>
+        <p class="flexp">View plans</p>
+        <p class="flexp">Reviews</p>
       </div>
       <div>
-        <h5>Help me</h5>
-        <p>FAQ</p>
-        <p>Terms of use</p>
-        <p>Privacy policy</p>
-        <p>Cookies</p>
+        <h5 class="flexh">Help me</h5>
+        <p class="flexp">FAQ</p>
+        <p class="flexp">Terms of use</p>
+        <p class="flexp">Privacy policy</p>
+        <p class="flexp">Cookies</p>
       </div>
       <div>
-        <h5>Contact</h5>
-        <p>Sales</p>
-        <p>Support</p>
-        <p>Live chat</p>
+        <h5 class="flexh">Contact</h5>
+        <p class="flexp">Sales</p>
+        <p class="flexp">Support</p>
+        <p class="flexp">Live chat</p>
       </div>
       <div>
-        <h5>Others</h5>
-        <p>Careers</p>
-        <p>Press</p>
-        <p>Licenses</p>
+        <h5 class="flexh">Others</h5>
+        <p class="flexp">Careers</p>
+        <p class="flexp">Press</p>
+        <p class="flexp">Licenses</p>
       </div>
     </div>
   </footer>
-  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Judith Kraziewicz</a>.
