add final changes to html and css

--- a/insure-landing-page-desktop/index.html
+++ b/insure-landing-page-desktop/index.html
@@ -71,7 +71,7 @@
   <footer class="foot">
     <div class="flexfoot1">
       <img src="./images/logo.svg">
-      <div>
+      <div class="logos">
         <img src="./images/icon-facebook.svg">
         <img src="./images/icon-twitter.svg">
         <img src="./images/icon-pinterest.svg">
