--- a/huddle-landing-page-with-alternating-feature-blocks-master/index.html
+++ b/huddle-landing-page-with-alternating-feature-blocks-master/index.html
@@ -2,45 +2,33 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="styles.css">
   <title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
 </head>
 <body>
   <section>
-    Try It Free
-
-    Build The Community Your Fans Will Love
-
-    Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-    Create connections with your users as you engage in genuine discussion. 
-
-    Get Started For Free
+    <a>Try It Free</a>
+    <h1>Build The Community Your Fans Will Love</h1>
+    <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
+    <a>Get Started For Free</a>
   </section>
   <section>
-    Grow Together
-
-    Generate meaningful discussions with your audience and build a strong, loyal community. 
-    Think of the insightful conversations you miss out on with a feedback form. 
+    <h2>Grow Together</h2>
+    <p>Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
   </section>
   <section>
-    Flowing Conversations
-
-    You wouldn't paginate a conversation in real life, so why do it online? Our threads 
-    have just-in-time loading for a more natural flow.
+    <h2>Flowing Conversations</h2>
+    <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
   </section>
   <section>
-    Your Users
-
-    It takes no time at all to integrate Huddle with your app's authentication solution. 
-    This means, once signed in to your app, your users can start chatting immediately.
+    <h3>Your Users</h3>
+    <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
   </section>
   <section>
-    Ready To Build Your Community?
-
-    Get Started For Free
+    <h3>Ready To Build Your Community?</h3>
+    <a>Get Started For Free</a>
   </section>
   <footer>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
